--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/index.css">
+    <script src="assets/index.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <section id="content">
+        <button id="gen-btn">
+            Generate Board
+        </button>
+        <div id="board">
+
+        </div>
+    </section>
 </body>
 </html>
