--- a/index.html
+++ b/index.html
@@ -9,11 +9,20 @@
 </head>
 <body>
     <section id="content">
-        <button id="gen-btn">
-            Generate Board
-        </button>
+        <div class="gen-btn-container">
+            <button id="gen-btn">
+                Generate Board
+            </button>
+        </div>
+
         <div id="board">
 
+        </div>
+        
+        <div id="words-list-container">
+            <ul id="words-list">
+
+            </ul>
         </div>
     </section>
 </body>
