fixing word list, styling

--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="title">
+        WORDSEARCH
+    </div>
     <section id="content">
-        <div class="gen-btn-container">
-            <button id="gen-btn">
-                Generate Board
-            </button>
+        <div id="board-container">
+            <div id="board">
+
+            </div>  
+            <div class="gen-btn-container">
+                <button id="gen-btn">
+                    Generate Board
+                </button>
+            </div>          
         </div>
 
-        <div id="board">
-
-        </div>
-        
         <div id="words-list-container">
             <ul id="words-list">
 
