added score, fixed finding words bug

--- a/index.html
+++ b/index.html
@@ -28,11 +28,9 @@
             <div id="board">
 
             </div>  
-            <!-- <div class="gen-btn-container">
-                <button id="gen-btn">
-                    Generate Board
-                </button>
-            </div>           -->
+            <div id="score-container">
+                <span id="score"></span>
+            </div>
         </div>
 
         <div id="words-list-container">
