added total score and ending message

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <label for="topic">Enter a topic:</label>
             <input type="text" id="input-topic" name="topic">
             <button id="gen-btn" type="submit">
-                Generate Board
+                Generate
             </button>
             <button id="rand-btn" type="button">
                 Random
@@ -28,9 +28,6 @@
             <div id="board">
 
             </div>  
-            <div id="score-container">
-                <span id="score"></span>
-            </div>
         </div>
 
         <div id="words-list-container">
@@ -39,5 +36,13 @@
             </ul>
         </div>
     </section>
+    <div id="score-container">
+        <span id="ws-score"></span>
+        <span id="total-score"></span>
+    </div>
+    <div id="message-container">
+        <span class="message"></span>
+    </div>
+    <!-- <span id="total-score"></span> -->
 </body>
 </html>
