fixing ending message and btn styling

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
         <form action="submit" id="topic-form">
             <label for="topic">Enter a topic:</label>
             <input type="text" id="input-topic" name="topic">
-            <button id="gen-btn" type="submit">
-                Generate
-            </button>
-            <button id="rand-btn" type="button">
-                Random
-            </button>
+            <div class="buttons">
+                <button id="gen-btn" type="submit">
+                    Generate
+                </button>
+                <button id="rand-btn" type="button">
+                    Random
+                </button>
+            </div>
         </form>
     </div>
     <section id="content">
