timer,ending message bugs and styling

--- a/index.html
+++ b/index.html
@@ -25,13 +25,23 @@
             </div>
         </form>
     </div>
+    <div id="timer">
+        <div>
+            <span class="minutes"></span>
+            <div class="timer-text">  </div>
+        </div>
+        <span class="timer-colon hidden"> : </span>
+        <div>
+            <span class="seconds"></span>
+            <div class="timer-text">  </div>
+        </div>
+    </div>
     <section id="content">
         <div id="board-container">
             <div id="board">
 
             </div>  
         </div>
-
         <div id="words-list-container">
             <ul id="words-list">
 
