--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/index.css">
     <script src="assets/index.js" defer></script>
-    <title>Document</title>
+    <title>Wordsearch</title>
 </head>
 <body>
     <div class="title">
