--- a/index.html
+++ b/index.html
@@ -25,16 +25,10 @@
             </div>
         </form>
     </div>
-    <div id="timer">
-        <div>
-            <span class="minutes"></span>
-            <div class="timer-text">  </div>
-        </div>
-        <span class="timer-colon hidden"> : </span>
-        <div>
-            <span class="seconds"></span>
-            <div class="timer-text">  </div>
-        </div>
+    <div id="timer" class="hidden">
+        <span class="minutes"></span>
+        <span class="timer-colon"> : </span>
+        <span class="seconds"></span>
     </div>
     <section id="content">
         <div id="board-container">
