changed ending message into modal, styling

--- a/index.html
+++ b/index.html
@@ -46,9 +46,14 @@
         <span id="ws-score"></span>
         <span id="total-score"></span>
     </div>
-    <div id="message-container">
-        <span class="message"></span>
+    <div id="message-modal" class="hidden">
+        <section id="message-container">
+            <span class="message"></span>
+            <span class="msg-score"></span> 
+            <div class="msg-buttons">
+                
+            </div>
+        </section>
     </div>
-    <!-- <span id="total-score"></span> -->
 </body>
 </html>
